--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.thymeleaf.mode =LEGACYHTML5
 #https://itstory.tk/entry/thymeleaf-legacy-html5-%EB%AA%A8%EB%93%9C-%EC%84%A4%EC%A0%95?category=969380
 
-project.base-dir=file:///D:/kegg_workspace/koreaEgg
-spring.thymeleaf.prefix=${project.base-dir}/src/main/resources/templates/
-spring.thymeleaf.cache=false 
-spring.resources.static-locations=${project.base-dir}/src/main/resources/static/
-spring.resources.cache-period=0
+#project.base-dir=file:///D:/kegg_workspace/koreaEgg
+#spring.thymeleaf.prefix=${project.base-dir}/src/main/resources/templates/
+#spring.thymeleaf.cache=false
+#spring.resources.static-locations=${project.base-dir}/src/main/resources/static/
+#spring.resources.cache-period=0
 #√‚√≥: https://intruder.tistory.com/182 [I.K.Picture & IT Info.]
