--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.thymeleaf.mode =LEGACYHTML5
 #https://itstory.tk/entry/thymeleaf-legacy-html5-%EB%AA%A8%EB%93%9C-%EC%84%A4%EC%A0%95?category=969380
 
+#설마이거?
 #project.base-dir=file:///D:/kegg_workspace/koreaEgg
 #spring.thymeleaf.prefix=${project.base-dir}/src/main/resources/templates/
 #spring.thymeleaf.cache=false
