--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>cc</groupId>
     <artifactId>koreaEgg</artifactId>
     <version>1.0</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>KoreaEgg</name>
     <description>Project for Korea egg homepage</description>
@@ -67,13 +67,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
-        </dependency>
-
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
-            <scope>provided</scope>
         </dependency>
 
         <!-- 타임리스 LEGACYHTML5-->
