--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
             <version>2.2</version>
         </dependency>
 
+        <!--logback-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.4</version>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
