유저시작할거임

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,18 @@
             <scope>provided</scope>
         </dependency>
 
+        <!--Aspect-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.8.9</version>
+        </dependency>
+
 
     </dependencies>
 
