--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,28 @@
 spring.profiles.active=local
 property.hello=!!! default properties load !!!
 
+# Embedded Server Configuration (ServerProperties)
+server.tomcat.uri-encoding=UTF-8
+#[ï¿½ï¿½Ã³] 201711_Spring Boot - JSPï¿½ï¿½ï¿½ï¿½ Javaï¿½ï¿½ ï¿½Ñ±ï¿½ï¿½ï¿½ ï¿½Ñ¾î°¥ ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ ï¿½Ø°ï¿½ï¿½Ï±ï¿½ (application.properties)|ï¿½Û¼ï¿½ï¿½ï¿½ inhwAnt
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true 
+spring.http.encoding.force=true
+
+
+
+
 spring.datasource.url=jdbc:mysql://49.236.136.18:3306/kegg?autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password=dkswogus1@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.sql-script-encoding=UTF-8
 
 spring.thymeleaf.mode =LEGACYHTML5
 #https://itstory.tk/entry/thymeleaf-legacy-html5-%EB%AA%A8%EB%93%9C-%EC%84%A4%EC%A0%95?category=969380
 
-# mybatis ¸ÅÇÎ typeÀ» Âª°Ô ¾²±â À§ÇÑ ¼³Á¤
+# mybatis ï¿½ï¿½ï¿½ï¿½ typeï¿½ï¿½ Âªï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½
 mybatis.type-aliases-package=cc.koreaEgg.entity
-# mapper ÀÌÇÏ¸¦ ·Î±ë À§Ä¡·Î ¼³Á¤.
+# mapper ï¿½ï¿½ï¿½Ï¸ï¿½ ï¿½Î±ï¿½ ï¿½ï¿½Ä¡ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½.
 logging.level.net.chndol.study.mybatissample.mapper=TRACE
-#µ¿Àû SQL¿¡ ?¸¦ ÆÄ¶ó¸ÞÅÍ¿¡ ¸ÅÇÎ
+#ï¿½ï¿½ï¿½ï¿½ SQLï¿½ï¿½ ?ï¿½ï¿½ ï¿½Ä¶ï¿½ï¿½ï¿½Í¿ï¿½ ï¿½ï¿½ï¿½ï¿½
 mybatis.configuration.default-scripting-language=cc.koreaEgg.config.EnhanceMybatisLanguageDriver
