--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 property.hello=!!! default properties load !!!
 
+sms.aligo.userId=mink721
+sms.aligo.key=fjwn18a84pa0piidalyb8w4g6xrlsf7x
+sms.aligo.sender=01080790179
+sms.aligo.testmode_yn=Y
+sms.aligo.sms_url=https://apis.aligo.in/send/
+
 # Embedded Server Configuration (ServerProperties)
 server.tomcat.uri-encoding=UTF-8
 #[\uFFFD\uFFFD\u00F3] 201711_Spring Boot - JSP\uFFFD\uFFFD\uFFFD\uFFFD Java\uFFFD\uFFFD \uFFFD\u0471\uFFFD\uFFFD\uFFFD \uFFFD\u047E\uEC25 \uFFFD\uFFFD \uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD \uFFFD\uFFFD\uFFFD\uFFFD \uFFFD\u0630\uFFFD\uFFFD\u03F1\uFFFD (application.properties)|\uFFFD\u06FC\uFFFD\uFFFD\uFFFD inhwAnt
