--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,11 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>2.0.3.RELEASE</version>
+        </dependency>
 
     </dependencies>
 
