--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true 
 spring.http.encoding.force=true
 
-spring.datasource.url=jdbc:mysql://49.236.136.18:3306/kegg?autoReconnect=true
+spring.datasource.url=jdbc:mysql://49.236.136.18:3306/kegg?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=dkswogus1@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -28,3 +28,12 @@ mybatis.type-aliases-package=cc.koreaEgg.entity
 logging.level.net.chndol.study.mybatissample.mapper=TRACE
 #\uFFFD\uFFFD\uFFFD\uFFFD SQL\uFFFD\uFFFD ?\uFFFD\uFFFD \uFFFD\u0136\uFFFD\uFFFD\uFFFD\u037F\uFFFD \uFFFD\uFFFD\uFFFD\uFFFD
 mybatis.configuration.default-scripting-language=cc.koreaEgg.config.EnhanceMybatisLanguageDriver
+mybatis.configuration.map-underscore-to-camel-case=true
+
+# Define a custom port instead of the default 8080
+server.port=8443
+server.ssl.key-alias=selfsigned
+server.ssl.key-password=dkswogus1@
+server.ssl.key-store=classpath:keystore.jks
+server.ssl.key-store-provider=SUN
+server.ssl.key-store-type=JKS
