난가정보 하는중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,5 @@
 property.hello=!!! default properties load !!!
-
-sms.aligo.userId=mink721
-sms.aligo.key=fjwn18a84pa0piidalyb8w4g6xrlsf7x
-sms.aligo.sender=01080790179
-sms.aligo.testmode_yn=Y
-sms.aligo.sms_url=https://apis.aligo.in/send/
+spring.profiles.active=server
 
 # Embedded Server Configuration (ServerProperties)
 server.tomcat.uri-encoding=UTF-8
