난가정보 하는중

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,10 +1,10 @@
 property.hello=!!! local properties load !!!
 
-#설마이거?
-project.base-dir=file:///D:/kegg_workspace/koreaEgg
-spring.thymeleaf.prefix=${project.base-dir}/src/main/resources/templates/
-spring.thymeleaf.cache=false
-spring.resources.static-locations=${project.base-dir}/src/main/resources/static/
-spring.resources.cache.period=0
-#출처: https://intruder.tistory.com/182 [I.K.Picture & IT Info.]
+#\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0330\uFFFD?
+#project.base-dir=file:///D:/kegg_workspace/koreaEgg
+#spring.thymeleaf.prefix=${project.base-dir}/src/main/resources/templates/
+#spring.thymeleaf.cache=false
+#spring.resources.static-locations=${project.base-dir}/src/main/resources/static/
+#spring.resources.cache.period=0
+#\uFFFD\uFFFD\u00F3: https://intruder.tistory.com/182 [I.K.Picture & IT Info.]
 
