--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,4 +1,6 @@
 property.hello=!!! local properties load !!!
+server.tomcat.port=7777
+server.port=7776
 
 #\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0330\uFFFD?
 project.base-dir=file:///D:/kegg_workspace/koreaEgg
