--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,8 @@ server.ssl.key-password=dkswogus1@
 server.ssl.key-store=classpath:keystore.jks
 server.ssl.key-store-provider=SUN
 server.ssl.key-store-type=JKS
+
+# \uC5D0\uB7EC\uD398\uC774\uC9C0 \uCEE4\uC2A4\uD140
+server.error.whitelabel.enabled=false
+#for Spring Boot 2.0
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
