--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,7 @@ mybatis.configuration.default-scripting-language=cc.koreaEgg.config.EnhanceMybat
 mybatis.configuration.map-underscore-to-camel-case=true
 
 # Define a custom port instead of the default 8080
+server.tomcat.port=8080
 server.port=8443
 server.ssl.key-alias=selfsigned
 server.ssl.key-password=dkswogus1@
